--- a/app/_locales/en/messages.json
+++ b/app/_locales/en/messages.json
@@ -115,7 +115,7 @@
 
 
   "settingsAdvHeader": {
-    "message": "Settings placement",
+    "message": "Advanced option",
     "description": "Advanced options header (settings page)"
   },
 
