Added option to hide 'Share' button

--- a/app/_locales/en/messages.json
+++ b/app/_locales/en/messages.json
@@ -122,5 +122,10 @@
   "settingAdvNewTab": {
     "message": "'View Image' opens in new tab",
     "description": "Settings option for opening in new tabs."
+  },
+
+  "settingAdvHideShare": {
+    "message": "Hide 'Share' button",
+    "description": "Settings option for hiding google's default 'Share' button."
   }
 }
